# sensorbox

./: CMakeLists.txt  Doxyfile.in  README.md  package.xml
cmake/: config.cmake.in
config/: sensors.json
include/convert/sensorbox_ros/: imu.hpp  pose.hpp  pose_twist.hpp
include/sensorbox/: accelerometer.hpp  actuator.hpp  contact.hpp  current.hpp  encoder.hpp  gyroscope.hpp  imu.hpp  json_loadable.hpp  measurement.hpp  message_decoder.hpp  pose.hpp  pose_twist.hpp  position.hpp  random_walk_sensor.hpp  ros1_decoder.hpp  ros2_decoder.hpp  sensor.hpp  stiffness.hpp  unary.hpp
include/sensorbox/impl/: accelerometer.hpp  actuator.hpp  contact.hpp  current.hpp  encoder.hpp  gyroscope.hpp  imu.hpp  json_loadable.hpp  json_loadable.impl.hpp  measurement.hpp  message_decoder.hpp  pose.hpp  pose_twist.hpp  position.hpp  random_walk_sensor.hpp  ros1_decoder.hpp  ros1_decoder.impl.hpp  ros2_decoder.hpp  ros2_decoder.impl.hpp  sensor.hpp  sensorbox.hpp  stiffness.hpp
include/sensorbox/json/: convert.hpp
include/sensorbox/json/impl/: convert.hpp  convert.impl.hpp
schemas/: Accelerometer.schema.json  Actuator.schema.json  CurrentSensor.schema.json  DirectPoseSensor.schema.json  DirectPositionSensor.schema.json  Encoder.schema.json  Gyroscope.schema.json  Imu.schema.json  Pose.schema.json  Pose2D.schema.json  Pose3D.schema.json  Quaternion.schema.json  RandomWalkSensor.schema.json  Sensor.schema.json  TemporalBinaryClassifications.schema.json  TemporalSizes.schema.json  TemporalValues.schema.json  Uncertainty.schema.json  Vector2D.schema.json  Vector3D.schema.json
sensorbox/: CMakeLists.txt  Doxyfile.in  README.md  package.xml
sensorbox/cmake/: config.cmake.in  setup.cmake
sensorbox/include/sensorbox/: accelerometer.hpp  gyroscope.hpp  imu.hpp  pose.hpp  random_walk_sensor.hpp  sensor.hpp  unary.hpp
sensorbox/include/sensorbox/impl/: accelerometer.hpp  gyroscope.hpp  imu.hpp  pose.hpp  pose_twist.hpp  random_walk_sensor.hpp
sensorbox/src/: sensor.cpp
sensorbox/test/: CMakeLists.txt
sensorbox/test/include/sensorbox/test/: test_instances.hpp
sensorbox/test/src/: test.cpp
sensorbox/test/src/test/: test_instances.cpp
sensorbox_catkin/: CMakeLists.txt  package.xml
src/: accelerometer.cpp  actuator.cpp  contact.cpp  current.cpp  encoder.cpp  gyroscope.cpp  imu.cpp  json_loadable.cpp  pose.cpp  pose_twist.cpp  position.cpp  random_walk_sensor.cpp  ros1_decoder.cpp  ros2_decoder.cpp  sensor.cpp  stiffness.cpp  unary.cpp
src/convert/sensorbox_ros/: imu.cpp  pose.cpp  pose_twist.cpp
src/json/: convert.cpp
test/: CMakeLists.txt
test/include/sensorbox/test/: test_instances.hpp
test/src/: imu.cpp
