<?xml version="1.0"?>
<package format="2">
    <name>sensorbox_catkin</name>
    <version>0.3.0</version>
    <description>sensorbox_catkin</description>

    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>BSD-3_Clause</license>
    <author email="william.talbot97@gmail.com">William Talbot</author>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>mathbox_catkin</exec_depend>
</package>
